Revert "Try to solve a Safari bug where the code editor has a height of 0px."
It's no good: it give back scroolbars (didn't notice in dev: my example exercise is too short).

This reverts commit ff7469229dc828e856fc92b20a0820f5dbc1f3ab.

--- a/website/static/css/hkis.css
+++ b/website/static/css/hkis.css
@@ -17,7 +17,7 @@ nav.navbar {
 
 .hkis_content {
     flex: 1 1 auto;
-    min-height: fit-content;
+    min-height: 0;
     padding-left: .5em;
     padding-top: .5em;
     padding-right: .5em;
